schema/testdata/validation_relationships_attr_on_non_repeated_field/schema.keel
model Author {
}

model Post {
    fields {
        author Author @relation(written)
    }
}
